# rustunnel

./: CLAUDE.md  Cargo.toml  README.md
crates/rustunnel-client/: Cargo.toml
crates/rustunnel-client/src/: config.rs  control.rs  health.rs  main.rs  p2p_direct.rs  proxy.rs  regions.rs  stun.rs  version.rs
crates/rustunnel-mcp/: Cargo.toml
crates/rustunnel-mcp/src/: api_client.rs  tools.rs
crates/rustunnel-protocol/: Cargo.toml
crates/rustunnel-protocol/src/: frame.rs  lib.rs
crates/rustunnel-server/: Cargo.toml
crates/rustunnel-server/migrations/pg/: 0006_platform_phase1.sql  0007_platform_auth_tokens.sql  0008_phase3_billing.sql  0009_custom_subdomains.sql  0010_payg_minimum.sql  0011_google_auth.sql  0012_p2p_tunnels.sql  0013_system_tokens.sql
crates/rustunnel-server/src/: config.rs  main.rs
dashboard-ui/: package.json  tsconfig.tsbuildinfo
dashboard-ui/components/: Dashboard.tsx  GroupsPanel.tsx  HealthTimeline.tsx  TunnelHistoryPanel.tsx  TunnelTable.tsx
dashboard-ui/hooks/: useGroups.ts  useHealthEvents.ts  useTunnelHistory.ts
dashboard-ui/lib/: types.ts
deploy/: server.local.toml  server.toml
deploy/local/: server.toml
docs/: ROADMAP.md  api-reference.md  architecture.md  claude-plugin.md  client-guide.md  database.md  docker-deployment.md  load-balancing.md  mcp-server.md  p2p-tunnels.md  udp-tunnels.md
plugins/claude-code/: .mcp.json  README.md
plugins/claude-code/.claude-plugin/: plugin.json
scripts/: bump-version.sh
skills/rustunnel/: SKILL.md
tests/: Cargo.toml
tests/common/: mod.rs
tests/integration/: alert_webhook.rs  dashboard_scope.rs  data_ws_reconnect.rs  group_events_sse.rs  health_checks.rs  http_groups.rs  p2p_tunnel.rs  reconnect.rs  tcp_groups.rs  udp_tunnel.rs  version_gate.rs
(+14 files in other folders)
